ErrLogs/alarm.py.err.log
  File "/home/robot/RoboAlarm/alarm.py", line 38
    base = "TONE SEQUENCE",
         ^
SyntaxError: invalid syntax
